monitoria/mac323/5-3-24/grades/Matheus-Tavares-Bernardino_201348_assignsubmission_file_FindAllOccurrences.txt

LOG DE COMPILAÇÃO E TESTE
Existem dois métodos de compilação, eles estão indicados, se um falha eu parto pro outro. Então se quiser entender o porque não compilou, verifique todos.
Segue também o log do corretor, pode ser interessante para descobrir a natureza de seus erros. A saída está trucada (não mostra todas as linha), se quiser ver todo o log, fale comigo

CC......
EP: Matheus-Tavares-Bernardino_201348_assignsubmission_file_FindAllOccurrences
NOTA: 100
CORREÇÃO AUTOMÁTICA
1200 Pontos (máximo: 1600, dos quais 400 são bônus)
0 Testes com Falha no corretor (avise o monitor)
2 Testes com Erro de Compilação (incui o bônus)

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/5-3-24/tester/checker/checker' is up to date.
======= Booyer_006 ============
BooyerDoVictor.java:4: error: cannot find symbol
        BoyerMoore ex = new BoyerMoore(StdIn.readString());
        ^
  symbol:   class BoyerMoore
  location: class BooyerDoVictor
BooyerDoVictor.java:4: error: cannot find symbol
        BoyerMoore ex = new BoyerMoore(StdIn.readString());
                            ^
  symbol:   class BoyerMoore
  location: class BooyerDoVictor
2 errors
Compilation Error on Booyer
======= Booyer_007 ============
BooyerDoVictor.java:4: error: cannot find symbol
        BoyerMoore ex = new BoyerMoore(StdIn.readString());
        ^
  symbol:   class BoyerMoore
  location: class BooyerDoVictor
BooyerDoVictor.java:4: error: cannot find symbol
        BoyerMoore ex = new BoyerMoore(StdIn.readString());
                            ^
  symbol:   class BoyerMoore
  location: class BooyerDoVictor
2 errors
Compilation Error on Booyer
======= Brute_003 ============
Note: ./Brute.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

real	0m0.307s
user	0m0.208s
sys	0m0.056s
partially correct (200) perfeito
======= Brute_004 ============

real	0m0.163s
user	0m0.176s
sys	0m0.036s
partially correct (200) perfeito
======= Brute_005 ============

real	0m0.167s
user	0m0.200s
sys	0m0.028s
partially correct (200) perfeito
======= KMP_000 ============
Note: ./KMP.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

real	0m0.175s
user	0m0.172s
sys	0m0.036s
partially correct (200) perfeito
======= KMP_001 ============

real	0m0.204s
user	0m0.200s
sys	0m0.016s
partially correct (200) perfeito
======= KMP_002 ============

real	0m0.163s
user	0m0.180s
sys	0m0.036s
partially correct (200) perfeito
